# ShadowSentryS3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.ua.md  README.uk.md  SECURITY.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  arp_monitor.c  arp_monitor.h  config.h  config.h.example  geoip.c  geoip.h  idf_component.yml  index.html  main.c  wifi_manager.c  wifi_manager.h  wifi_monitor.c  wifi_monitor.h
main/admin/: admin_panel.c  admin_panel.h  telegram.c  telegram.h  ws_server.c  ws_server.h
main/honeypot/: fake_shell.c  fake_shell.h  ftp_trap.c  ftp_trap.h  http_trap.c  http_trap.h  rtsp_trap.c  rtsp_trap.h  ssh_hostkey.h  ssh_trap.c  ssh_trap.h  telnet_trap.c  telnet_trap.h
main/storage/: log_store.c  log_store.h
